--- a/09-jquery-and-tempalting/codealong/templates/index.html
+++ b/09-jquery-and-tempalting/codealong/templates/index.html
@@ -14,6 +14,11 @@
     <input id="new-thing-button" type="submit" value="Create new thing"></submit>
   </form>
 
+
+  <script id="to-do-template" type="text/x-handlebars-template">
+      <li class="fav-thing">{{toDo}} <a href="#" class="complete">Complete</a> <a href="#" class="delete">Delete</a></li>
+    </script>
+
   <script src="../../assets/handlebars-4.0.12.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
